browse-preview feature

--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -11,7 +11,12 @@
       <div class='browse-holder'>
         <form action=''>
           <label for='browse'></label>
-          <input type='text' name='browse' placeholder='Search' />
+          <input
+            type='text'
+            name='browse'
+            placeholder='Search'
+            class='search-bar'
+          />
           <label for='submit'></label>
           <input
             type='submit'
@@ -22,6 +27,10 @@
           />
         </form>
         <ion-icon name='search-sharp' class='magnifier'></ion-icon>
+        <div class='preview-container'>
+          {{! <img src='images/perfumes/image-9.jpg' alt='' class='preview-image' />
+          <p class='preview-name'>test</p> }}
+        </div>
       </div>
 
       <div class='log-in'>
