--- a/public/stylesheets/nav.css
+++ b/public/stylesheets/nav.css
@@ -7,7 +7,6 @@ nav {
   /* background-color: #adb5bd; */
   color: #000;
   padding: 0rem 2rem;
-
 }
 .upper-nav {
   max-width: 130rem;
@@ -68,7 +67,8 @@ nav {
   display: flex;
   gap: 1rem;
 }
-.log-in a, .log-in button {
+.log-in a,
+.log-in button {
   color: #000;
   font-size: 1.5rem;
 
@@ -189,12 +189,10 @@ select {
   background-color: rgba(0, 0, 0, 0.15);
   z-index: 99;
 
-
   transform: translateX(100%);
 
   transition: all 1s;
 }
-
 
 .sign-modal {
   width: 100%;
@@ -213,7 +211,6 @@ select {
 
   display: flex;
   flex-direction: column;
-
 }
 #register {
   display: none;
@@ -243,7 +240,7 @@ select {
 
   font-size: 1.5rem;
 }
-.sign-modal form input[type="submit"] {
+.sign-modal form input[type='submit'] {
   width: 100%;
   max-width: 15rem;
   margin: 0 auto;
@@ -261,7 +258,7 @@ select {
 
   display: flex;
   justify-content: space-around;
- 
+
   padding: 1rem;
 
   font-size: 1.6rem;
@@ -269,12 +266,13 @@ select {
   background-color: #f8f8f8;
 }
 
-
 /* default modal settings */
-.sign-out, .profile-el {
+.sign-out,
+.profile-el {
   display: none;
 }
-.pass-reset, .return-login {
+.pass-reset,
+.return-login {
   text-align: center !important;
   padding: 1rem;
   border: none;
@@ -283,4 +281,31 @@ select {
 }
 #reset-password {
   display: none;
+}
+
+/* preview-product */
+.preview-container {
+  position: absolute;
+
+  width: 100%;
+
+  background-color: #fff;
+  z-index: 9999;
+}
+.preview-anchor {
+  display: grid;
+  grid-template-columns: 5rem 1fr;
+  align-items: center;
+}
+
+.preview-image {
+  width: 100%;
+  height: 5rem;
+}
+.preview-name {
+  margin: 0rem !important;
+  font-weight: 400;
+  font-size: 1.4rem;
+  color: #000;
+  margin-left: 1rem !important;
 }
