--- a/public/stylesheets/resultPage.css
+++ b/public/stylesheets/resultPage.css
@@ -1,6 +1,6 @@
 .result-main {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(224.5px, 1fr));
   gap: 1rem;
 
   width: 100%;
