--- a/views/product.hbs
+++ b/views/product.hbs
@@ -64,7 +64,7 @@
               {{!-- price and pay button --}}
               <div class="p-info--four">
                <p class="p-info--four--price">{{perfumeData.Price}}</p>
-              <a href="#" class="p-info--four--buy">Buy</a>
+              <a href="/scart/addtocart" class="p-info--four--buy">Buy</a>
               </div>
           </div>
         </div>
