static pages added

--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -65,9 +65,9 @@
       <a href='/'>Decanting</a>
       <a href='#'>Makeup</a>
       <a href='#'>Victoria's Secret</a>
-      <a href='#'>Catalogue</a>
-      <a href='#'>About us</a>
-      <a href='#'>Payment</a>
+      <a href='/catalogue'>Catalogue</a>
+      <a href='/about'>About us</a>
+      <a href='/payment'>Payment</a>
       <a href='#'>News</a>
       <a href='/contact'>Contacts</a>
     </div>
