--- a/public/stylesheets/contact.css
+++ b/public/stylesheets/contact.css
@@ -38,3 +38,12 @@ main {
 select {
   font-size: 2rem;
 }
+
+@media only screen and (max-width: 768px) {
+  .cta {
+    grid-template-columns: 1fr;
+  }
+  .form-container {
+    grid-row: 1;
+  }
+}
