product/store style update, pagination logic implemented

--- a/views/product.hbs
+++ b/views/product.hbs
@@ -93,7 +93,7 @@
             <a href="#comment-submission-id" class="review-form--button">Add a review</a>
             <div class="review-comment--container">
                {{#each comments}}
-              <div class="unique-review--comment" style="border-bottom: 1px solid black; padding: 2px">
+              <div class="unique-review--comment">
                 <p>{{this.Name}} <span>26.8.2023</span></p>
                 <p>{{this.Rating}} stars</p>
                 <p>{{this.Review}}</p>
