--- a/public/stylesheets/product.css
+++ b/public/stylesheets/product.css
@@ -155,4 +155,15 @@ input[type='radio']:checked + label:before {
   flex-direction: column;
   gap: 1rem;
   margin-top: 1rem;
+  padding: 2rem;
+  border-top: 1px solid black;
+}
+.unique-review--comment:first-child {
+  border: none;
+}
+
+@media only screen and (max-width: 768px) {
+  .product-container {
+    grid-template-columns: 1fr;
+  }
 }
