--- a/public/stylesheets/store.css
+++ b/public/stylesheets/store.css
@@ -167,6 +167,7 @@ main {
   font-size: 1.6rem;
   padding: 0rem 1rem;
   border-radius: 50%;
+  margin-right: 1rem;
 }
 
 /* SUBMIT- FILTER BUTTON */
