--- a/views/index.hbs
+++ b/views/index.hbs
@@ -84,19 +84,19 @@
         <div class="grid-inner">
           <img src="/images/perfumes/image-13.jpg" alt="grid-image" />
           <div class="grid-info">
-            <a href="#">Perfume Name - Link</a>
+            <a href="#">Decant</a>
           </div>
         </div>
         <div class="grid-inner">
           <img src="/images/perfumes/image-14.jpg" alt="grid-image" />
           <div class="grid-info">
-            <a href="#">Perfume Name - Link</a>
+            <a href="#">Make-up</a>
           </div>
         </div>
         <div class="grid-inner">
           <img src="/images/perfumes/image-15.jpg" alt="grid-image" />
           <div class="grid-info">
-            <a href="#">Perfume Name - Link</a>
+            <a href="#">Victoria's Secret</a>
           </div>
         </div>
       </section>
@@ -120,10 +120,9 @@
                 </div>
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    Some quick example text to build on the card title and make
-                    up the bulk of the card's content.
-                  </p>
+                  <select name="" id="">
+                    <option value="1">1</option>
+                  </select>
                   <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
               </div>
@@ -139,10 +138,9 @@
                 </div>
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    Some quick example text to build on the card title and make
-                    up the bulk of the card's content.
-                  </p>
+                 <select name="" id="">
+                    <option value="1">1</option>
+                  </select>
                   <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
               </div>
@@ -158,10 +156,9 @@
                 </div>
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    Some quick example text to build on the card title and make
-                    up the bulk of the card's content.
-                  </p>
+                 <select name="" id="">
+                    <option value="1">1</option>
+                  </select>
                   <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
               </div>
@@ -177,10 +174,9 @@
                 </div>
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    Some quick example text to build on the card title and make
-                    up the bulk of the card's content.
-                  </p>
+                 <select name="" id="">
+                    <option value="1">1</option>
+                  </select>
                   <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
               </div>
@@ -196,10 +192,9 @@
                 </div>
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    Some quick example text to build on the card title and make
-                    up the bulk of the card's content.
-                  </p>
+                 <select name="" id="">
+                    <option value="1">1</option>
+                  </select>
                   <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
               </div>
@@ -215,10 +210,9 @@
                 </div>
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    Some quick example text to build on the card title and make
-                    up the bulk of the card's content.
-                  </p>
+                 <select name="" id="">
+                    <option value="1">1</option>
+                  </select>
                   <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
               </div>
@@ -234,10 +228,9 @@
                 </div>
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    Some quick example text to build on the card title and make
-                    up the bulk of the card's content.
-                  </p>
+                 <select name="" id="">
+                    <option value="1">1</option>
+                  </select>
                   <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
               </div>
@@ -253,10 +246,9 @@
                 </div>
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    Some quick example text to build on the card title and make
-                    up the bulk of the card's content.
-                  </p>
+                 <select name="" id="">
+                    <option value="1">1</option>
+                  </select>
                   <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
               </div>
@@ -272,10 +264,9 @@
                 </div>
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    Some quick example text to build on the card title and make
-                    up the bulk of the card's content.
-                  </p>
+                  <select name="" id="">
+                    <option value="1">1</option>
+                  </select>
                   <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
               </div>
