--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -68,7 +68,6 @@
       <a href='/catalogue'>Catalogue</a>
       <a href='/about'>About us</a>
       <a href='/payment'>Payment</a>
-      <a href='#'>News</a>
       <a href='/contact'>Contacts</a>
     </div>
 
@@ -90,10 +89,9 @@
     <a href='#'>Decanting</a>
     <a href='#'>Makeup</a>
     <a href='#'>Victoria's Secret</a>
-    <a href='#'>Catalogue</a>
-    <a href='#'>About us</a>
-    <a href='#'>Payment and Delivery</a>
-    <a href='#'>News and Promotions</a>
+    <a href='/catalogue'>Catalogue</a>
+    <a href='/about'>About us</a>
+    <a href='/payment'>Payment and Delivery</a>
     <a href='/contact'>Contacts</a>
   </div>
 </header>
