--- a/public/stylesheets/nav.css
+++ b/public/stylesheets/nav.css
@@ -107,7 +107,7 @@ select {
   max-width: 130rem;
   margin: 0 auto;
   display: grid;
-  grid-template-columns: repeat(9, 1fr);
+  grid-template-columns: repeat(8, 1fr);
   text-align: center;
   align-items: center;
   gap: 1rem;
@@ -138,7 +138,7 @@ select {
   bottom: 0;
   width: 25rem;
 
-  background: linear-gradient(to bottom, #91171f, #ffd8a8);
+  background: linear-gradient(to bottom, #e9ecef, #d4b28c);
   transform: translate(-27rem);
 
   transition: all 0.5s;
@@ -150,7 +150,7 @@ select {
   font-size: 1.7rem;
   padding: 0rem 1rem;
   font-weight: 600;
-  border-bottom: 1px solid #ffd8a8;
+  border-bottom: 1px solid #d4b28c;
 }
 .slider-menu ion-icon {
   color: #000;
