--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,10 +1,6 @@
-
-
-
 /* MAIN */
 main {
   width: 100%;
-
 }
 
 /* carousel */
@@ -25,7 +21,9 @@ main {
   object-fit: 100% 100%;
 } */
 /* test  */
-.img-div, .img-div-second, .img-div-third {
+.img-div,
+.img-div-second,
+.img-div-third {
   background-image: url('/images/perfumes/image-11.jpg');
   background-size: cover;
   background-position: center;
@@ -38,7 +36,6 @@ main {
 .img-div-third {
   background-image: url('/images/perfumes/image-9.jpg');
 }
-
 
 .carousel-cta {
   position: absolute;
@@ -106,7 +103,7 @@ main {
 .grid-info a {
   font-size: 1.8rem;
   font-weight: 600;
-  color: #000;
+  color: #fff;
 }
 
 /* best seller */
@@ -138,14 +135,36 @@ main {
 
 .card .img-wrapper {
   max-width: 100%;
-  height: 13rem;
+
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 .card .img-wrapper img {
-  max-height: 100%;
+  height: 100%;
+  min-height: 13rem;
+  max-height: 13rem;
   object-fit: cover;
 }
 
+.card-body {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+.card-body h5 {
+  font-size: 1.4rem;
+  text-align: center;
+}
 
+.card-body select {
+  border: 1px solid black;
+  font-size: 1.5rem;
+  text-align: center;
+}
+.card-body a {
+  background-color: white;
+  color: black;
+  border: 1px solid black;
+}
