--- a/views/product.hbs
+++ b/views/product.hbs
@@ -66,6 +66,7 @@
                 <input type="hidden" value="{{perfumeData.Id}}" name="id">
                 <input type="hidden" name="userid" value="" id="">
                <button type="submit"  class="p-info--four--buy">Buy</button>
+                <p class="cart-notification"></p>
               </div>
             </form>
           </div>
