--- a/public/stylesheets/store.css
+++ b/public/stylesheets/store.css
@@ -226,6 +226,10 @@ main {
   .product-order {
     width: 100%;
     max-width: 50rem;
+    /* font-size: 2rem !important; */
+  }
+  #p-order--id {
+    font-size: 1.5rem !important;
   }
   .filter-toggle--open,
   .filter-toggle--close {
@@ -241,4 +245,16 @@ main {
   .store-products {
     grid-template-columns: repeat(2, 1fr);
   }
+}
+
+.cart-notification {
+  color: black;
+  font-size: 2rem;
+  text-align: center;
+  position: absolute;
+  top: 12rem;
+  left: 50%;
+  transform: translateX(-50%);
+  opacity: 0;
+  transition: opacity 1s;
 }
