cart update - product interaction

--- a/views/cart.hbs
+++ b/views/cart.hbs
@@ -30,6 +30,16 @@
         </div>
             <p class="product-price">100$</p>
       </div>
+      <div class="product">
+        <img src="/images/perfumes/image-1.jpg" alt="product">
+        <p class="product-name">Armani perfume</p>
+        <div class="product-js--scale">
+          <button class="decrement-product">-</button>
+          <span class="product-qnt">1</span>
+          <button class="increment-product">+</button>
+        </div>
+            <p class="product-price">100$</p>
+      </div>
   
     </div>
     <div class="right-side">
@@ -74,5 +84,6 @@
     ></script>
       <script src="/scripts/register.js"></script>
     <script src="/scripts/nav.js"></script>
+    <script src="/scripts/cart.js"></script>
    
   </body>
